--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,21 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import 'tailwindcss';
+@plugin "daisyui" {
+	themes: wireframe --default;
+}
 
+@theme {
+	--font-inter: 'Inter', sans-serif;
+}
 
 body {
-  @apply font-inter overflow-x-hidden
+	@apply font-inter overflow-x-hidden;
 }
 
-h1,h2 {
-  @apply text-3xl text-center
+h1,
+h2 {
+	@apply text-center text-3xl;
 }
-
 
 /** {*/
 /**/
